--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,26 @@
-version: '3.8'
-
 services:
-  # PostgreSQL service
-  postgres:
-    image: postgres:13-alpine  # Lightweight PostgreSQL image
-    environment:
-      POSTGRES_USER: your_database_user     # Change to your desired user
-      POSTGRES_PASSWORD: your_password      # Change to your desired password
-      POSTGRES_DB: your_database_name       # Change to your desired database name
+  hanuman:
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - "5432:5432"     # Expose the PostgreSQL port
+      - "8082:8082"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/your_database_name
+      SPRING_DATASOURCE_USERNAME: your_db_username
+      SPRING_DATASOURCE_PASSWORD: your_db_password
+    depends_on:
+      - postgres
+
+  postgres:
+    image: postgres:latest
+    restart: always
+    environment:
+      POSTGRES_DB: your_database_name
+      POSTGRES_USER: your_db_username
+      POSTGRES_PASSWORD: your_db_password
     volumes:
-      - postgres-data:/var/lib/postgresql
+      - postgres-data:/var/lib/postgresql/data
+
+volumes:
+  postgres-data:
